✏️ Fix wrong position with icons in button

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1055,7 +1055,7 @@ video {
 /* Scale SVG icons to text size */
 
 .icon svg {
-  height: 1em;
+  height: 1.5em;
   width: 1em;
 }
 
