--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
 
 /* Scale SVG icons to text size */
 .icon svg {
-  height: 1em;
+  height: 1.5em;
   width: 1em;
 }
 
